--- a/ChatConsoleServer/ChatConsoleServer.csproj
+++ b/ChatConsoleServer/ChatConsoleServer.csproj
@@ -16,7 +16,7 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -32,6 +32,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,13 +67,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ALAZ.SystemEx.NetEx\ALAZ.SystemEx.NetEx.csproj">
+    <ProjectReference Include="..\ALAZ.SystemEx.NetEx\EchoSocketCore.csproj">
       <Project>{25162422-3B32-4FB3-8A99-6BCFBE30D9AE}</Project>
-      <Name>ALAZ.SystemEx.NetEx</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ALAZ.SystemEx\ALAZ.SystemEx.csproj">
-      <Project>{FA1EF4FC-2FC7-4B29-9EAB-2872593C89E2}</Project>
-      <Name>ALAZ.SystemEx</Name>
+      <Name>EchoSocketCore</Name>
     </ProjectReference>
     <ProjectReference Include="..\ChatCryptService\ChatCryptService.csproj">
       <Project>{980671E8-C957-4054-AE45-B6C70CB16AB8}</Project>
