--- a/EchoConsoleServer/App.config
+++ b/EchoConsoleServer/App.config
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
   <system.net>
     <settings>
-      <socket
-        alwaysUseCompletionPortsForAccept="true"
-        alwaysUseCompletionPortsForConnect="true"
-       />
+      <socket alwaysUseCompletionPortsForAccept="true" alwaysUseCompletionPortsForConnect="true"/>
     </settings>
   </system.net>
 
@@ -21,16 +18,15 @@
     
     <switches>
       <!-- The value tag below is a TraceLevel enumeration. Change it to start logging. -->
-      <add name="System.Net.Sockets" value="Off" />
+      <add name="System.Net.Sockets" value="Off"/>
     </switches>
     
     <sharedListeners>
-      <add name="Sockets" type="System.Diagnostics.TextWriterTraceListener" 
-        initializeData="Sockets.log"/>
+      <add name="Sockets" type="System.Diagnostics.TextWriterTraceListener" initializeData="Sockets.log"/>
     </sharedListeners>
     
-    <trace autoflush="true" />
+    <trace autoflush="true"/>
     
   </system.diagnostics>
   
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
