--- a/ALAZ.SystemEx.NetEx/EchoSocketCore.csproj
+++ b/ALAZ.SystemEx.NetEx/EchoSocketCore.csproj
@@ -58,12 +58,15 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
+    <Compile Include="SocketsEx\SocketContext.cs" />
     <Compile Include="SocketsEx\AuthenticateCallbackData.cs" />
     <Compile Include="SocketsEx\BaseSocketConnection.cs" />
     <Compile Include="SocketsEx\BaseSocketConnectionCreator.cs" />
     <Compile Include="SocketsEx\BaseSocketConnectionHost.cs" />
     <Compile Include="SocketsEx\BufferUtils.cs" />
     <Compile Include="SocketsEx\ProxyUtils.cs" />
+    <Compile Include="SocketsEx\SocketCreatorContext.cs" />
+    <Compile Include="SocketsEx\SocketHostContext.cs" />
     <Compile Include="SocketsEx\WriteData.cs" />
     <Compile Include="SocketsEx\ClientSocketConnection.cs" />
     <Compile Include="SocketsEx\ConnectionEventArgs.cs" />
@@ -82,6 +85,9 @@
     <Compile Include="SocketsEx\SocketServer.cs" />
     <Compile Include="SocketsEx\SocketsExTypes.cs" />
     <Compile Include="ThreadingEx\ThreadEx.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
