--- a/EchoConsoleServer/App.config
+++ b/EchoConsoleServer/App.config
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+
   <system.net>
     <settings>
-      <socket alwaysUseCompletionPortsForAccept="true" alwaysUseCompletionPortsForConnect="true"/>
+      <socket alwaysUseCompletionPortsForAccept="true" alwaysUseCompletionPortsForConnect="true" />
     </settings>
   </system.net>
 
@@ -11,22 +11,24 @@
     <sources>
       <source name="System.Net.Sockets">
         <listeners>
-          <add name="Sockets"/>
+          <add name="Sockets" />
         </listeners>
       </source>
     </sources>
-    
+
     <switches>
       <!-- The value tag below is a TraceLevel enumeration. Change it to start logging. -->
-      <add name="System.Net.Sockets" value="Off"/>
+      <add name="System.Net.Sockets" value="Off" />
     </switches>
-    
+
     <sharedListeners>
-      <add name="Sockets" type="System.Diagnostics.TextWriterTraceListener" initializeData="Sockets.log"/>
+      <add name="Sockets" type="System.Diagnostics.TextWriterTraceListener" initializeData="Sockets.log" />
     </sharedListeners>
-    
-    <trace autoflush="true"/>
-    
+
+    <trace autoflush="true" />
   </system.diagnostics>
-  
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+</configuration>
