--- a/ChatConsoleServer/ChatConsoleServer.csproj
+++ b/ChatConsoleServer/ChatConsoleServer.csproj
@@ -67,10 +67,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ALAZ.SystemEx.NetEx\EchoSocketCore.csproj">
-      <Project>{25162422-3B32-4FB3-8A99-6BCFBE30D9AE}</Project>
-      <Name>EchoSocketCore</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ChatCryptService\ChatCryptService.csproj">
       <Project>{980671E8-C957-4054-AE45-B6C70CB16AB8}</Project>
       <Name>ChatCryptService</Name>
@@ -78,6 +74,10 @@
     <ProjectReference Include="..\ChatSocketService\ChatSocketService.csproj">
       <Project>{3C7587F0-0C9B-4596-B706-DBBFFDBB6208}</Project>
       <Name>ChatSocketService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EchoSocketCore\EchoSocketCore.csproj">
+      <Project>{25162422-3b32-4fb3-8a99-6bcfbe30d9ae}</Project>
+      <Name>EchoSocketCore</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
