--- a/EchoFormClientSynch/EchoFormClientSynch.csproj
+++ b/EchoFormClientSynch/EchoFormClientSynch.csproj
@@ -76,12 +76,6 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ALAZ.SystemEx.NetEx\EchoSocketCore.csproj">
-      <Project>{25162422-3B32-4FB3-8A99-6BCFBE30D9AE}</Project>
-      <Name>EchoSocketCore</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
       <ProductName>.NET Framework Client Profile</ProductName>
@@ -115,6 +109,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EchoSocketCore\EchoSocketCore.csproj">
+      <Project>{25162422-3b32-4fb3-8a99-6bcfbe30d9ae}</Project>
+      <Name>EchoSocketCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
