--- a/EchoSocketCore/EchoSocketCore.csproj
+++ b/EchoSocketCore/EchoSocketCore.csproj
@@ -58,7 +58,20 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
+    <Compile Include="SocketsEx\BaseCryptoService.cs" />
+    <Compile Include="SocketsEx\BaseSocketService.cs" />
+    <Compile Include="SocketsEx\Exceptions.cs" />
+    <Compile Include="SocketsEx\IBaseSocketConnectionCreator.cs" />
+    <Compile Include="SocketsEx\IBaseSocketConnectionHost.cs" />
+    <Compile Include="SocketsEx\IClientSocketConnection.cs" />
+    <Compile Include="SocketsEx\ICryptoService.cs" />
+    <Compile Include="SocketsEx\IServerSocketConnection.cs" />
+    <Compile Include="SocketsEx\ISocketConnection.cs" />
+    <Compile Include="SocketsEx\ISocketConnectionInfo.cs" />
+    <Compile Include="SocketsEx\ISocketService.cs" />
+    <Compile Include="SocketsEx\SocketClientSyncSocketService.cs" />
     <Compile Include="SocketsEx\ISocketSecurityProvider.cs" />
+    <Compile Include="SocketsEx\SocketClientSyncCryptService.cs" />
     <Compile Include="SocketsEx\SocketContext.cs" />
     <Compile Include="SocketsEx\AuthenticateCallbackData.cs" />
     <Compile Include="SocketsEx\BaseSocketConnection.cs" />
