--- a/EchoSocketCore/EchoSocketCore.csproj
+++ b/EchoSocketCore/EchoSocketCore.csproj
@@ -58,47 +58,47 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
-    <Compile Include="SocketsEx\BaseCryptoService.cs" />
-    <Compile Include="SocketsEx\BaseSocketService.cs" />
-    <Compile Include="SocketsEx\Exceptions.cs" />
-    <Compile Include="SocketsEx\IBaseSocketConnectionCreator.cs" />
-    <Compile Include="SocketsEx\IBaseSocketConnectionHost.cs" />
-    <Compile Include="SocketsEx\IClientSocketConnection.cs" />
-    <Compile Include="SocketsEx\ICryptoService.cs" />
-    <Compile Include="SocketsEx\IServerSocketConnection.cs" />
-    <Compile Include="SocketsEx\ISocketConnection.cs" />
-    <Compile Include="SocketsEx\ISocketConnectionInfo.cs" />
-    <Compile Include="SocketsEx\ISocketService.cs" />
-    <Compile Include="SocketsEx\SocketClientSyncSocketService.cs" />
-    <Compile Include="SocketsEx\ISocketSecurityProvider.cs" />
-    <Compile Include="SocketsEx\SocketClientSyncCryptService.cs" />
-    <Compile Include="SocketsEx\SocketContext.cs" />
-    <Compile Include="SocketsEx\AuthenticateCallbackData.cs" />
-    <Compile Include="SocketsEx\BaseSocketConnection.cs" />
-    <Compile Include="SocketsEx\BaseSocketConnectionCreator.cs" />
-    <Compile Include="SocketsEx\BaseSocketConnectionHost.cs" />
-    <Compile Include="SocketsEx\BufferUtils.cs" />
-    <Compile Include="SocketsEx\ProxyUtils.cs" />
-    <Compile Include="SocketsEx\SocketCreatorContext.cs" />
-    <Compile Include="SocketsEx\SocketHostContext.cs" />
-    <Compile Include="SocketsEx\SocketRSACryptoProvider.cs" />
-    <Compile Include="SocketsEx\WriteData.cs" />
-    <Compile Include="SocketsEx\ClientSocketConnection.cs" />
-    <Compile Include="SocketsEx\ConnectionEventArgs.cs" />
-    <Compile Include="SocketsEx\CryptUtils.cs" />
-    <Compile Include="SocketsEx\ExceptionEventArgs.cs" />
-    <Compile Include="SocketsEx\MessageBuffer.cs">
+    <Compile Include="SocketsEx\Security\BaseCryptoService.cs" />
+    <Compile Include="SocketsEx\Service\BaseSocketService.cs" />
+    <Compile Include="SocketsEx\Exception\Exceptions.cs" />
+    <Compile Include="SocketsEx\Creator\IBaseSocketConnectionCreator.cs" />
+    <Compile Include="SocketsEx\Host\IBaseSocketConnectionHost.cs" />
+    <Compile Include="SocketsEx\Connection\IClientSocketConnection.cs" />
+    <Compile Include="SocketsEx\Security\ICryptoService.cs" />
+    <Compile Include="SocketsEx\Connection\IServerSocketConnection.cs" />
+    <Compile Include="SocketsEx\Connection\ISocketConnection.cs" />
+    <Compile Include="SocketsEx\Connection\ISocketConnectionInfo.cs" />
+    <Compile Include="SocketsEx\Service\ISocketService.cs" />
+    <Compile Include="SocketsEx\Service\SocketClientSyncSocketService.cs" />
+    <Compile Include="SocketsEx\Security\ISocketSecurityProvider.cs" />
+    <Compile Include="SocketsEx\Security\SocketClientSyncCryptService.cs" />
+    <Compile Include="SocketsEx\Context\SocketContext.cs" />
+    <Compile Include="SocketsEx\Security\AuthenticateCallbackData.cs" />
+    <Compile Include="SocketsEx\Connection\BaseSocketConnection.cs" />
+    <Compile Include="SocketsEx\Creator\BaseSocketConnectionCreator.cs" />
+    <Compile Include="SocketsEx\Host\BaseSocketConnectionHost.cs" />
+    <Compile Include="SocketsEx\Utils\BufferUtils.cs" />
+    <Compile Include="SocketsEx\Utils\ProxyUtils.cs" />
+    <Compile Include="SocketsEx\Context\SocketCreatorContext.cs" />
+    <Compile Include="SocketsEx\Context\SocketHostContext.cs" />
+    <Compile Include="SocketsEx\Security\SocketRSACryptoProvider.cs" />
+    <Compile Include="SocketsEx\Model\WriteData.cs" />
+    <Compile Include="SocketsEx\Connection\ClientSocketConnection.cs" />
+    <Compile Include="SocketsEx\Event\ConnectionEventArgs.cs" />
+    <Compile Include="SocketsEx\Utils\CryptUtils.cs" />
+    <Compile Include="SocketsEx\Event\ExceptionEventArgs.cs" />
+    <Compile Include="SocketsEx\Model\MessageBuffer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SocketsEx\MessageEventArgs.cs" />
-    <Compile Include="SocketsEx\ProxyInfo.cs" />
-    <Compile Include="SocketsEx\ServerSocketConnection.cs" />
-    <Compile Include="SocketsEx\SocketClient.cs" />
+    <Compile Include="SocketsEx\Event\MessageEventArgs.cs" />
+    <Compile Include="SocketsEx\Model\ProxyInfo.cs" />
+    <Compile Include="SocketsEx\Connection\ServerSocketConnection.cs" />
+    <Compile Include="SocketsEx\Host\SocketClient.cs" />
     <Compile Include="SocketsEx\SocketClientSync.cs" />
-    <Compile Include="SocketsEx\SocketConnector.cs" />
-    <Compile Include="SocketsEx\SocketListener.cs" />
-    <Compile Include="SocketsEx\SocketServer.cs" />
-    <Compile Include="SocketsEx\SocketsExTypes.cs" />
+    <Compile Include="SocketsEx\Creator\SocketConnector.cs" />
+    <Compile Include="SocketsEx\Creator\SocketListener.cs" />
+    <Compile Include="SocketsEx\Host\SocketServer.cs" />
+    <Compile Include="SocketsEx\Model\SocketsExTypes.cs" />
     <Compile Include="ThreadingEx\ThreadEx.cs" />
   </ItemGroup>
   <ItemGroup>
