--- a/EchoSocketCore/EchoSocketCore.csproj
+++ b/EchoSocketCore/EchoSocketCore.csproj
@@ -58,6 +58,7 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
+    <Compile Include="SocketsEx\Context\SocketClientSyncContext.cs" />
     <Compile Include="SocketsEx\Security\BaseCryptoService.cs" />
     <Compile Include="SocketsEx\Service\BaseSocketService.cs" />
     <Compile Include="SocketsEx\Exception\Exceptions.cs" />
