--- a/EchoSocketCore/EchoSocketCore.csproj
+++ b/EchoSocketCore/EchoSocketCore.csproj
@@ -58,18 +58,15 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
-    <Compile Include="SocketsEx\Context\SocketClientSyncContext.cs" />
     <Compile Include="SocketsEx\Security\BaseCryptoService.cs" />
     <Compile Include="SocketsEx\Security\SocketRSACryptoProvider.cs" />
     <Compile Include="SocketsEx\Service\BaseSocketService.cs" />
     <Compile Include="SocketsEx\Exception\Exceptions.cs" />
-    <Compile Include="SocketsEx\Creator\IBaseSocketConnectionCreator.cs" />
-    <Compile Include="SocketsEx\Provider\IBaseSocketProvider.cs" />
     <Compile Include="SocketsEx\Connection\IClientSocketConnection.cs" />
     <Compile Include="SocketsEx\Security\ICryptoService.cs" />
     <Compile Include="SocketsEx\Connection\IServerSocketConnection.cs" />
     <Compile Include="SocketsEx\Connection\ISocketConnection.cs" />
-    <Compile Include="SocketsEx\Connection\ISocketConnectionInfo.cs" />
+    <Compile Include="SocketsEx\ISocket.cs" />
     <Compile Include="SocketsEx\Service\ISocketService.cs" />
     <Compile Include="SocketsEx\Service\SocketClientSyncSocketService.cs" />
     <Compile Include="SocketsEx\Security\ISocketSecurityProvider.cs" />
@@ -81,8 +78,6 @@
     <Compile Include="SocketsEx\Provider\BaseSocketProvider.cs" />
     <Compile Include="SocketsEx\Utils\BufferUtils.cs" />
     <Compile Include="SocketsEx\Utils\ProxyUtils.cs" />
-    <Compile Include="SocketsEx\Context\SocketCreatorContext.cs" />
-    <Compile Include="SocketsEx\Context\SocketHostContext.cs" />
     <Compile Include="SocketsEx\Model\WriteData.cs" />
     <Compile Include="SocketsEx\Connection\ClientSocketConnection.cs" />
     <Compile Include="SocketsEx\Event\ConnectionEventArgs.cs" />
