--- a/EchoSocketCore/EchoSocketCore.csproj
+++ b/EchoSocketCore/EchoSocketCore.csproj
@@ -58,7 +58,12 @@
     <Compile Include="BaseFinalizable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntTimeEx\InteropServicesEx\MarshalEx.cs" />
+    <Compile Include="SocketsEx\Context\SocketClientSyncContext.cs" />
+    <Compile Include="SocketsEx\Context\SocketCreatorContext.cs" />
+    <Compile Include="SocketsEx\Context\SocketHostContext.cs" />
+    <Compile Include="SocketsEx\Creator\IBaseSocketConnectionCreator.cs" />
     <Compile Include="SocketsEx\Model\IdProvider.cs" />
+    <Compile Include="SocketsEx\Provider\IBaseSocketHost.cs" />
     <Compile Include="SocketsEx\Security\BaseCryptoService.cs" />
     <Compile Include="SocketsEx\Security\SocketRSACryptoProvider.cs" />
     <Compile Include="SocketsEx\Service\BaseSocketService.cs" />
@@ -67,7 +72,6 @@
     <Compile Include="SocketsEx\Security\ICryptoService.cs" />
     <Compile Include="SocketsEx\Connection\IServerSocketConnection.cs" />
     <Compile Include="SocketsEx\Connection\ISocketConnection.cs" />
-    <Compile Include="SocketsEx\ISocket.cs" />
     <Compile Include="SocketsEx\Service\ISocketService.cs" />
     <Compile Include="SocketsEx\Service\SocketClientSyncSocketService.cs" />
     <Compile Include="SocketsEx\Security\ISocketSecurityProvider.cs" />
@@ -76,7 +80,7 @@
     <Compile Include="SocketsEx\Security\AuthenticateCallbackData.cs" />
     <Compile Include="SocketsEx\Connection\BaseSocketConnection.cs" />
     <Compile Include="SocketsEx\Creator\BaseSocketConnectionCreator.cs" />
-    <Compile Include="SocketsEx\Provider\BaseSocketProvider.cs" />
+    <Compile Include="SocketsEx\Provider\BaseSocketHost.cs" />
     <Compile Include="SocketsEx\Utils\BufferUtils.cs" />
     <Compile Include="SocketsEx\Utils\ProxyUtils.cs" />
     <Compile Include="SocketsEx\Model\WriteData.cs" />
@@ -90,11 +94,11 @@
     <Compile Include="SocketsEx\Event\MessageEventArgs.cs" />
     <Compile Include="SocketsEx\Model\ProxyInfo.cs" />
     <Compile Include="SocketsEx\Connection\ServerSocketConnection.cs" />
-    <Compile Include="SocketsEx\Provider\SocketClientProvider.cs" />
+    <Compile Include="SocketsEx\Provider\SocketClient.cs" />
     <Compile Include="SocketsEx\SocketClientSync.cs" />
     <Compile Include="SocketsEx\Creator\SocketConnector.cs" />
     <Compile Include="SocketsEx\Creator\SocketListener.cs" />
-    <Compile Include="SocketsEx\Provider\SocketServerProvider.cs" />
+    <Compile Include="SocketsEx\Provider\SocketServer.cs" />
     <Compile Include="SocketsEx\Model\SocketsExTypes.cs" />
     <Compile Include="ThreadingEx\ThreadEx.cs" />
   </ItemGroup>
